--- a/style.css
+++ b/style.css
@@ -15,21 +15,19 @@ body{
 }
 .calculator{
     padding: 20px;
+    margin-top: 15px;
     border: 2px solid #000;
-    border-radius: 15px;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.7);
 }
 input{
     width: 315px;
-    padding: 23px;
-    margin:9px;
+    padding: 20px;
+    margin:3px;
     background: rgba(255, 255, 255, 0.4);
     box-shadow: inset0px 0px 8px rgba(0, 0, 0, 0.3);
-    font-size: 64px;
+    font-size: 30px;
     text-align: right;
-    color: #fff;
-    border-radius: 15px;
-    text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+    color: #000;
 }
 input::placeholder{
     color: #fff;
@@ -40,16 +38,15 @@ button{
     margin:10px;
     color:#fff;
     background: rgba(0, 0, 0, 0.7);
-    font-size: 24px;
+    font-size: 15px;
     cursor: pointer;
     border: solid 1px rgba(0, 0, 0, 0.3);
-    border-radius: 24px;
     text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
     box-shadow: -1px 2px 10px rgba(0, 0, 0, 0.5);
 
 }
 .oprtAc,.oprtDelete{
-    font-size: 20px;
+    font-size: 10px;
 }
 button:hover{
     color: #fff;
